--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,19 @@
   height:100vh;
 }
 
+.logoClass {
+  position: absolute;
+  z-index: 100;
+  height: 5vh;
+  width: 5vh;
+}
 
+.logoImg {
+  height: 15vh;
+  width: 15vh;
+  margin-left: 10vh;
+  margin-top: 10vh;
+}
 @media screen and (max-width: 768px){
   .iner-menu{
     display:block !important;
