--- a/src/App.css
+++ b/src/App.css
@@ -48,15 +48,13 @@
 .logoClass {
   position: absolute;
   z-index: 100;
-  height: 5vh;
-  width: 5vh;
+  width: 100px;
+  height: 100px;
+  top: 50px;
 }
-
-.logoImg {
-  height: 15vh;
-  width: 15vh;
-  margin-left: 10vh;
-  margin-top: 10vh;
+.logoClass img{
+  width: 100%;
+  height: auto;
 }
 @media screen and (max-width: 768px){
   .iner-menu{
