--- a/src/App.css
+++ b/src/App.css
@@ -48,9 +48,10 @@
 .logoClass {
   position: absolute;
   z-index: 100;
-  width: 100px;
-  height: 100px;
-  top: 50px;
+  width: 70px;
+  height: 70px;
+  top: 70px;
+  left: 15px;
 }
 .logoClass img{
   width: 100%;
